# ai-realTime-web-llm-mcp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
graph/: graph.py
mcp_server/: client.py
tools/: webcam.py
