[project]
name = "ai-realtime-web-llm-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.40.20",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-aws>=0.2.31",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "mcp[cli]>=1.13.1",
    "python-dotenv>=1.1.1",
    "serpapi>=0.1.5",
    "streamlit>=1.49.0",
]
